Fixed line height for line wrapping situations

--- a/sass/modules/content/_content.scss
+++ b/sass/modules/content/_content.scss
@@ -9,19 +9,20 @@ ul.Tags {
     li {
         display: inline-block;
         list-style-type: none;
+        line-height: 2.25em;
+        margin-right: 10px;
         &:first-child {
           display: block;
-          //line-height: 2em;
-          padding: 0 0 1.25em 0;
+          padding: 0 0 1em 0;
+        }
+        &:last-child {
+          margin-right: 0px;
         }
         a {
             @include border-radius(5px);
-            margin-right: 10px;
             padding: 4px 8px;
             @include background-image(linear-gradient(top, nth($black, 5), darken(nth($black, 5), 5%)));
-            &:last-child:after {
-                margin-right: 0px;
-            }
+            
         }
     }
 }
